# cadwork-cppapi

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/geometry/: CMakeLists.txt
libs/geometry-py/: pyproject.toml
libs/geometry-py/src/geometry_py/: __init__.py  aabb.py  brep.py  cadwork_adapter.py  face.py  frame3d.py  loop.py  plane3d.py  point3d.py  spatial_index.py  vector3d.py
libs/geometry-py/tests/: test_aabb.py  test_brep.py  test_face.py  test_frame3d.py  test_loop.py  test_plane3d.py  test_point3d.py  test_spatial_index.py  test_vector3d.py
libs/geometry/cmake/: geometryConfig.cmake.in
libs/geometry/include/geometry/: Brep.hh  Face.hh  Frame3D.hh  Loop.hh  Plane3D.hh  Point3D.hh  Vector3D.hh  export.hh  geometry.hh
libs/geometry/src/: Brep.cc  Face.cc  Frame3D.cc  Loop.cc  Plane3D.cc  Point3D.cc  Vector3D.cc
libs/geometry/tests/: CMakeLists.txt  test_Brep.cc  test_Face.cc  test_Frame3D.cc  test_Loop.cc  test_Plane3D.cc  test_Point3D.cc  test_Vector3D.cc  test_main.cc
src/: CMakeLists.txt  Frame3D.cc  Frame3D.hh  Plane3D.cc  Plane3D.hh  Point3D.cc  Point3D.hh  Vector3D.cc  Vector3D.hh  app.cc  app.cpp  cwapi_brep_adapter.cc  cwapi_brep_adapter.hh  main.cc
